ch7-ingress/labs/lab01/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: namung08/k8s-labs-todo-backend:v1.0
          ports:
            - containerPort: 8080
