ch7-ingress/labs/lab01/database.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-headless-service-database
spec:
  selector:
    app: todo-database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None
